--- a/src/app/modules/shared/components/modal-info/modal-info.component.scss
+++ b/src/app/modules/shared/components/modal-info/modal-info.component.scss
@@ -63,15 +63,16 @@
 }
 
 .modal-footer__button-2 {
-    background-color: white;
-    color: black;
-    font-size: 1.2rem;
-    border-radius: 10px;
-    margin-top: 10px;
-    height: 40px;
-    font-weight: 700;
-    width: 47.5%;
-    margin-left: 20px;
+  background-color: #dcdcdc;
+  color: black;
+  font-size: 1.2rem;
+  border: none;
+  border-radius: 10px;
+  margin-top: 10px;
+  height: 40px;
+  font-weight: 700;
+  width: 47.5%;
+  margin-left: 20px;
 }
 
 .width100 {
